Inclusao de ano e mes em UserEarning e UserExpense
