# src/controllers/UserEarningController.js
@@ -9,20 +9,8 @@ const { NotFoundError, BadRequestError } = require("../utils/Errors");
 class UserEarningController {
   static async index(req, res, next) {
     try {
-      const { month } = req.query;
-      let whereCondition = { id: req.user.id };
-
-      if (month) {
-        whereCondition = {
-          ...whereCondition,
-          "$Earnings.UserEarning.transaction_date$": {
-            [Op.between]: [
-              moment().format(`YYYY-${month}-01`),
-              moment().format(`YYYY-${month}-31`),
-            ],
-          },
-        };
-      }
+      const { month, year } = req.query;
+      let whereCondition = UserEarning.mountQuery(month, year, req.user);
 
       const result = await User.findOne({
         where: whereCondition,
